# visp-release

./: 0001-Add-install-rule-for-package.xml-and-disable-testing.patch  0001-Add-install-rule-for-package.xml-disable-testing-and.patch  0001-Add-install-rule-for-package.xml-disable-testing.patch  0001-Allow-absolute-RPATH-for-workspace-library-directory.patch  0002-Fix-compat-with-OpenCV-3.3.1-modifying-argument-type.patch  0002-Force-CMAKE_INSTALL_LIBDIR-lib.patch  0002-Remove-flag-m32-and-m64-that-breaks-build-on-i386-bu.patch  0003-Use-Ogre-and-wireframe-simulator-resources-from-inst.patch  0004-Export-OpenCV-libraries-in-visp-config-visp.pc-and-V.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
doc/tutorial/detection/: tutorial-matching.dox
foxy/: package.xml
galactic/: package.xml
groovy/: package.xml
humble/: package.xml
indigo/: package.xml
jade/: package.xml
kinetic/: package.xml
lunar/: package.xml
melodic/: package.xml
modules/core/test/tools/threading/: testMutex.cpp
rolling/: package.xml
rpm/: ros-humble-visp.spec  ros-hydro-visp.spec  ros-indigo-visp.spec  ros-iron-visp.spec  ros-jade-visp.spec  ros-kilted-visp.spec  ros-kinetic-visp.spec  ros-lunar-visp.spec  ros-lyrical-visp.spec  ros-melodic-visp.spec  ros-noetic-visp.spec  ros-rolling-visp.spec  template.spec
tutorial/detection/object/: cube.cao  cube.wrl  cube.xml  detection-config-SIFT.xml  detection-config.xml  teabox.xml
tutorial/robot/mbot/arduino/mbot-serial-controller/: mbot-serial-controller.ino
tutorial/tracking/model-based/old/edges/: teabox.xml
